<resources>
    <string name="app_name">Auto Home</string>
    <string name="main_header">Jadoo</string>
    <string name="favorites">Favorites</string>
    <string name="bedroom">Bedroom</string>
    <string name="lights">Lights</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="sub_heading">Automate everything</string>
</resources>